--- a/Train/index.html
+++ b/Train/index.html
@@ -1,86 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>Mark Kahler| Train Schedule</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<div class="jumbotron">
-				<h1>Train Schedule</h1>
-				</div>
-			</div>
-		</div>
 
-		<div class="row">
-			<div class="col-md-12">
-				<div class="panel panel-primary">
-					<div class="panel-heading">
-						<h3 class="panel-title"> Current Train Schedule</h3>
-					</div>
-					<div class="panel-body">
-						<table class="table">
-							<thead>
-								<tr>
-									<th>Train Name</th>
-									<th>Destination</th>
-									<th>First Train</th>
-									<th>Frequency (Mins)</th>
-									<th>Next Arrival</th>
-									<th>Minutes Away</th>
-								</tr>
-							</thead>
-							<tbody class="tbody">
-							</tbody>
-						</table>
-					</div>
-				</div>
-			</div>
-		</div>
+<html lang="en-us">
 
-		<div class="row">
-			<div class="col-md-12">
-				<div class="panel panel-primary">
-					<div class="panel-heading">
-						<h3 class="panel-title"> Add Train</h3>
-					</div>
+  <head>
 
-					<div class="panel-body">
-						<form>
-							<div class="form-group">
-								<label for="trainNameInput">Train Name</label>
-								<input type="text" placeholder="ex: 3:10 to Yuma" class="form-control" id="trainNameInput">
-							</div>
-							<div class="form-group">
-								<label for="trainDestinationInput">Destination</label>
-								<input type="text" placeholder="ex: Grand Central Station" class="form-control" id="trainDestinationInput">
-							</div>
-							<div class="form-group">
-								<label for="frequencyInput">Frequency (mins)</label>
-								<input type="number" placeholder="ex: 20 --> every 20mins" class="form-control" id="frequencyInput">
-							</div>
-							<div class="form-group">
-								<label for="firstTrainInput">First Train (HH:mm - military time)</label>
-								<input type="text" placeholder="16:30 --> 4:30pm" class="form-control" id="firstTrainInput">
-							</div>
-							<button type="submit" class="btn btn-default" id="submitBtn">Submit</button>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
+    <meta charset="UTF-8">
+    <title>TrainTime</title>
 
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+    <!-- Firebase Reference -->
+    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
 
-	</div>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/3.7.3/firebase.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.2/moment.min.js"></script>
-	<script type="text/javascript" src="assets/javascript/app.js"></script>
+    <!-- Moment.js Reference -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
-</body>
+  </head>
+
+  <body>
+
+    <!-- Train Time -->
+    <div class="container">
+
+      <!-- Jumbotron -->
+      <div class="jumbotron" style="background-color: #7F462C; color: white">
+        <h1 class="text-center">Anytime is Train Time</h1>
+        <h3 class="text-center">Choo Choo. Chee Chee.</h3>
+      </div>
+
+      <div class="row">
+
+        <div class="col-lg-12">
+
+        <!-- Train Schedule -->
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title"><strong>Current Train Schedule</strong></h3>
+            </div>
+            <div class="panel-body">
+              <table class="table table-hover" id='train-table'>
+                <thead>
+                  <tr>
+                    <th>Train Name</th>
+                    <th>Destination</th>
+                    <th>Frequency (min)</th>
+                    <th>Next Arrival</th>
+                    <th>Minutes Away</th>
+                  </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+              </table>
+            </div>
+          </div>
+
+          <!-- Add Train  -->
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title"><strong>Add Train</strong></h3>
+            </div>
+            <div class="panel-body">
+
+              <!-- Entry Form -->
+              <form>
+                <div class="form-group">
+                  <label for="train-name-input">Train Name</label>
+                  <input type="text" class="form-control" id="train-name-input">
+                </div>
+                <div class="form-group">
+                  <label for="destination-input">Destination</label>
+                  <input type="text" class="form-control" id="destination-input">
+                </div>
+                <div class="form-group">
+                  <label for="first-train-input">First Train Time (HH:mm - military time)</label>
+                  <input type="text" class="form-control" id="first-train-input">
+                </div>
+                <div class="form-group">
+                  <label for="frequency-input">Frequency (min)</label>
+                  <input type="text" class="form-control" id="frequency-input">
+                </div>
+                <button type="submit" class="btn btn-primary" id="add-train-btn">Submit</button>
+              </form>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+    <!-- Script -->
+    <script src="assets/javascript/app.js"></script>
+
+  </body>
+
 </html>
