--- a/Train/index.html
+++ b/Train/index.html
@@ -28,9 +28,9 @@
     <div class="container">
 
       <!-- Jumbotron -->
-      <div class="jumbotron" style="background-color: #7F462C; color: white">
-        <h1 class="text-center">Anytime is Train Time</h1>
-        <h3 class="text-center">Choo Choo. Chee Chee.</h3>
+      <div class="jumbotron" style="background-color: #ff0004; color: white">
+        <h1 class="text-center">Train Times</h1>
+  
       </div>
 
       <div class="row">
