--- a/Train/index.html
+++ b/Train/index.html
@@ -70,22 +70,22 @@
               <!-- Entry Form -->
               <form>
                 <div class="form-group">
-                  <label for="train-name-input">Train Name</label>
-                  <input type="text" class="form-control" id="train-name-input">
+                  <label for="nameinput">Train Name</label>
+                  <input type="text" class="form-control" id="nameinput">
                 </div>
                 <div class="form-group">
-                  <label for="destination-input">Destination</label>
-                  <input type="text" class="form-control" id="destination-input">
+                  <label for="destinationinput">Destination</label>
+                  <input type="text" class="form-control" id="destinationinput">
                 </div>
                 <div class="form-group">
-                  <label for="first-train-input">First Train Time (HH:mm - military time)</label>
-                  <input type="text" class="form-control" id="first-train-input">
+                  <label for="firstinput">First Train Time (HH:mm - military time)</label>
+                  <input type="text" class="form-control" id="firstinput">
                 </div>
                 <div class="form-group">
-                  <label for="frequency-input">Frequency (min)</label>
-                  <input type="text" class="form-control" id="frequency-input">
+                  <label for="frequencyinput">Frequency (min)</label>
+                  <input type="text" class="form-control" id="frequencyinput">
                 </div>
-                <button type="submit" class="btn btn-primary" id="add-train-btn">Submit</button>
+                <button type="submit" class="btn btn-primary" id="trainbtn">Submit</button>
               </form>
 
             </div>
